created the word list components

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,17 +1,16 @@
 <header>
   <nav>
-    <a href="">
+    <a>
       <h1>Word List</h1>
     </a>
-    <a href="">HOME</a>
+    <!-- <a href="">HOME</a>
     <a href="">ABOUT</a>
-    <a href="">SETTINGS</a>
+    <a href="">SETTINGS</a> -->
   </nav>
 </header>
-<main role="main" class="app-main">
-  <div class="app-main-front">
-  </div>
-</main>
+<div class="rout-comp">
+  <router-outlet></router-outlet>
+</div>
 <footer>
   <small>it is application footer</small>
 </footer>
