--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -6,66 +6,34 @@
 */
 @media screen and (min-width:map-get($grid-breakpoints, md)) {
   main {
-    .app-main-front {
+    .left-pane {
+      width: 30%;
+    }
 
-      .word-list-nav {
-        height: 2em;
-        width: 56%;
-        margin: 0 30%;
-        padding-top: 1em;
-        border-bottom: 1px solid grey;
-        border-radius: 10px;
+    .right-pane {
+      width: 70%;
 
-        ul {
-          list-style-type: none;
-          padding: 0;
-          margin: 0;
+      .wordlist-actions {
+        width: 80%;
 
-          li {
-            margin: 0 1em;
-            display: inline-block;
-            cursor: pointer;
+        .wordlist-create {
+          float: right;
+          margin: 1em 0;
+
+          button {
+            width: 50px;
+            height: 50px;
+            border-radius: 50%;
           }
         }
       }
 
-      .left-pane {
-        display: inline-block;
-        width: 30%;
-      }
-
-      .right-pane {
-        width: 70%;
-        display: inline-block;
-
-        .wordlist-actions {
-          width: 80%;
-
-          .wordlist-create {
-            float: right;
-            margin: 1em 0;
-
-            button {
-              width: 50px;
-              height: 50px;
-              border-radius: 50%;
-            }
-          }
-        }
-
-        .word-list-container {
-          width: 80%;
-          display: grid;
-          grid-template-columns: repeat(2, 1fr);
-          grid-auto-rows: 100px;
-          grid-gap: 50px;
-
-          div {
-            cursor: pointer;
-            border-radius: 10px;
-            border: 1px solid black;
-          }
-        }
+      .word-list-container {
+        width: 80%;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-auto-rows: 100px;
+        grid-gap: 50px;
       }
     }
   }
@@ -78,32 +46,86 @@
 
 @media screen and (orientation:portrait) and (min-width:map-get($grid-breakpoints, xxs))and (max-width:map-get($grid-breakpoints, xs)) {
   main {
-    .app-main-front {
-      .word-list-nav {
-        ul {
-          list-style-type: none;
-          padding: 0;
+    .left-pane {
+      display: none;
+      width: 0;
+    }
 
-          li {
-            display: inline-block;
+    .right-pane {
+      width: 100%;
+
+      .wordlist-actions {
+        width: 100%;
+        margin: 1em 0;
+
+        .wordlist-create {
+          display: flex;
+          justify-content: center;
+
+          button {
+            width: 95%;
+            height: 3em;
+            border-radius: 5px;
           }
         }
       }
 
-      .left-pane {
-        width: 0;
+      .word-list-container {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-auto-rows: 100px;
+        grid-gap: 50px;
+        margin: 1em;
+        overflow-y: auto;
+      }
+    }
+  }
+}
+
+
+main {
+  .app-main-front {
+
+    .word-list-nav {
+      height: 2em;
+      width: 56%;
+      margin: 0 30%;
+      padding-top: 1em;
+      border-bottom: 1px solid grey;
+      border-radius: 10px;
+
+      ul {
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+
+        li {
+          margin: 0 1em;
+          display: inline-block;
+          cursor: pointer;
+        }
+      }
+    }
+
+    .left-pane {
+      display: inline-block;
+    }
+
+    .right-pane {
+      display: inline-block;
+
+      .wordlist-actions {
+
+        .wordlist-create {
+          button {}
+        }
       }
 
-      .right-pane {
-        display: flex;
-        justify-content: center;
-
-        .word-list-container {
-          display: grid;
-          width: 95%;
-          grid-template-columns: 1fr;
-          grid-auto-rows: 100px;
-          grid-gap: 50px;
+      .word-list-container {
+        div {
+          cursor: pointer;
+          border-radius: 10px;
+          border: 1px solid black;
         }
       }
     }
