--- a/src/app/marketplace/marketplace.component.scss
+++ b/src/app/marketplace/marketplace.component.scss
@@ -1,11 +1,198 @@
+// .marketplace {
+//   .left-pane {
+//     display: inline-block;
+//     width: 30%;
+//   }
+
+//   .right-pane {
+//     display: inline-block;
+//     width: 70%;
+//   }
+// }
+
+
+@import './../../variables';
+
+// div {
+//   border: 1px solid black;
+// }
+
+/* 
+  ##Device = Laptops, Desktops
+  ##Screen = B/w 768px to 1200px
+*/
+@media screen and (min-width:map-get($grid-breakpoints, md)) {
+  .marketplace {
+    .left-pane {
+      width: 30%;
+      float: left;
+    }
+
+    .right-pane {
+      width: 70%;
+      float: right;
+
+      .wordlist-actions {
+        width: 80%;
+        height: 5em;
+
+        .wordlist-create {
+          float: right;
+          margin: 1em 0;
+
+          button {
+            width: 10em;
+            height: 3em;
+            border-radius: 0.5em;
+          }
+        }
+
+        .wordlist-input {
+          width: 100%;
+          margin: 1em 0;
+
+          .wordlist-box {
+            display: flex;
+            justify-content: center;
+
+            input {
+              width: 70%;
+              height: 2.6em;
+            }
+
+            button {
+              width: 5em;
+              height: 3.1em;
+            }
+          }
+        }
+      }
+
+      .word-list-container {
+        width: 80%;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-auto-rows: 100px;
+        grid-gap: 50px;
+      }
+    }
+  }
+}
+
+/* 
+  ##Device = Most of the Smartphones Mobiles (Portrait)
+  ##Screen = B/w 320px to 480px
+*/
+
+@media screen and (orientation:portrait) and (min-width:map-get($grid-breakpoints, xxs))and (max-width:map-get($grid-breakpoints, xs)) {
+  .marketplace {
+    .left-pane {
+      display: none;
+      width: 0;
+    }
+
+    .right-pane {
+      width: 100%;
+
+      .wordlist-actions {
+        width: 100%;
+        margin: 1em 0;
+
+        .wordlist-create {
+          display: flex;
+          justify-content: center;
+
+          button {
+            width: 95%;
+            height: 3em;
+            border-radius: 5px;
+          }
+        }
+
+        .wordlist-input {
+          display: flex;
+          justify-content: center;
+
+          .wordlist-box {
+            width: 90%;
+
+            input {
+              width: 99%;
+              height: 3em;
+              margin: 0.2em 0;
+            }
+
+            .wordlist-box-actions {
+              button {
+                width: 50%;
+              }
+            }
+          }
+        }
+      }
+
+      .word-list-container {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+        grid-auto-rows: 100px;
+        grid-gap: 50px;
+        margin: 1em;
+        overflow-y: auto;
+      }
+    }
+  }
+}
+
+
 .marketplace {
+  // .app-main-front {
+
+  .word-list-nav {
+    height: 2em;
+    width: 56%;
+    margin: 0 30%;
+    padding-top: 1em;
+    border-bottom: 1px solid grey;
+    border-radius: 10px;
+
+    ul {
+      list-style-type: none;
+      padding: 0;
+      margin: 0;
+
+      li {
+        margin: 0 1em;
+        display: inline-block;
+        cursor: pointer;
+      }
+    }
+  }
+
   .left-pane {
     display: inline-block;
-    width: 30%;
   }
 
   .right-pane {
+    margin: 2em 0;
     display: inline-block;
-    width: 70%;
+
+    .wordlist-actions {
+
+      .wordlist-create {
+        button {}
+      }
+
+      .wordlist-input {}
+    }
+
+    .word-list-container {
+      div {
+        cursor: pointer;
+        border-radius: 10px;
+        border: 1px solid black;
+      }
+    }
   }
+
+  // }
 }
