added the  learn and practice modes actions

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
   </nav>
 </header>
 <div class="rout-comp">
-  <app-wordnav></app-wordnav>
+  <!-- <app-wordnav></app-wordnav> -->
   <router-outlet></router-outlet>
 </div>
 <footer>
